# demo-dataweave

./: .cursorrules  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  pyproject.toml
.github/PULL_REQUEST_TEMPLATE/: bugfix.md  feature.md
.github/workflows/: ci.yml
dataweave/: __init__.py  transform_pipeline.py
tests/: conftest.py  test_transform.py  test_xml.py
